﻿更新履歴

==== Ver 1.0.5-beta1(2012/xx/xx)
 * CHG: 「タブを固定」機能を「タブを保護」に名称変更

==== Ver 1.0.4(2012/08/13)
 * NEW: 「タブを固定」機能を追加
 * CHG: OAuth認証に内部ブラウザを使用する方法を廃止
 * CHG: Instagramのサムネイル画像を正式に提供されているURLに更新
 * FIX: プロフィール編集中に編集画面を閉じると次回編集時の挙動がおかしくなる問題を修正 (thanks @miracleflyer!)
 * FIX: ツイートのRT回数が正常に表示されない問題を修正 (thanks @re4k!)
 * FIX: ついっぷるフォト・imgur・pixivのサムネイルが正常に取得できない問題を修正
 * FIX: Bing翻訳のAPI仕様変更に対応

==== Ver 1.0.3(2012/05/26)
 * NEW: via.me のサムネイル表示に対応
 * CHG: yats-data.comのTwitter検索を削除 (サイト閉鎖のため)
 * FIX: UserStreamsのイベントログ表示をEscキーで閉じられない問題を修正
 * FIX: yfrogのサムネイルURL仕様変更に対応
 * FIX: ツイートに含まれるpixivのイラストURLの判定を修正
 * FIX: Pcklesのサムネイルが画像によっては表示できないことがある問題を修正

==== Ver 1.0.2(2012/05/19)
 * NEW: アップデート確認機能を追加
 * FIX: 発言詳細部においてUnicodeで追加された一部の文字が正しく表示されない問題を修正
 * FIX: メッセージなどに含まれるアプリケーション名の変更漏れを修正
 * FIX: タスクバーから復元した際に最大化した状態が保持されない問題を修正
 * FIX: ハートマーク <3 が文字化けして表示されてしまう問題を修正 (thanks @Lolitapple!)
 * FIX: タブの未読表示が解除されない場合がある問題を修正
 * FIX: ハッシュタグ検索時に例外が発生する可能性がある問題を修正
 * CHG: ツイートに含まれるURLの判定をより厳格に変更

==== Ver 1.0.1(2012/04/09)
 * FIX: OpenTweenアイコンが表示方法によって低解像度で表示されてしまう問題を修正
 * FIX: リスト表示上での一部のショートカットキーが動作しない問題を修正
 * FIX: 「常に最前面に表示」が有効な状態でバージョン情報ダイアログを表示できない問題を修正
 * FIX: 「最小化したときにアイコン化する」が強制的にオンになる問題を修正
 * FIX: STOT形式コピー時にprotectedユーザのつぶやきが混ざっているとエラーが発生する問題を修正 (thanks @tests_peer!)
 * FIX: PublicSearchタブで、一度クリアしたツイートがタブ更新時に再び表示されてしまう問題を修正 (thanks @5px!)
 * NEW: TwitrPixとPcklesのサムネイル画像表示に対応
 * NEW: fb.meとon.fb.meのURL展開に対応

==== Ver 1.0.0(2012/03/30)
 * 相変わらずオープンソースです。

 * NEW: OpenTweenのアイコンが追加されました
 * CHG: バージョン番号の表記を変更しました
 * CHG: bit.ly短縮におけるプライバシー問題の対処としてAPIキーの指定を必須としました
   http://sourceforge.jp/projects/opentween/lists/archive/dev/2012-January/000020.html

OpenTween以前のTweenの変更履歴はTweenのWebサイトを参照してください。