@@ -1099,62 +1099,6 @@ namespace OpenTween
 
 #endregion
 
-#region "brightkite"
-        /// <summary>
-        /// URL解析部で呼び出されるサムネイル画像URL作成デリゲート
-        /// </summary>
-        /// <param name="args">class GetUrlArgs
-        ///                                 args.url        URL文字列
-        ///                                 args.imglist    解析成功した際にこのリストに元URL、サムネイルURLの形で作成するKeyValuePair
-        /// </param>
-        /// <returns>成功した場合True,失敗の場合False</returns>
-        /// <remarks>args.imglistには呼び出しもとで使用しているimglistをそのまま渡すこと</remarks>
-
-        private bool brightkite_GetUrl(GetUrlArgs args)
-        {
-            // TODO URL判定処理を記述
-            var mc = Regex.Match(string.IsNullOrEmpty(args.extended) ? args.url : args.extended,
-                                 @"^http://brightkite\.com/objects/((\w{2})(\w{2})\w+)$", RegexOptions.IgnoreCase);
-            if (mc.Success)
-            {
-                // TODO 成功時はサムネイルURLを作成しimglist.Addする
-                args.imglist.Add(new KeyValuePair<string, string>(args.url, mc.Result("http://cdn.brightkite.com/${2}/${3}/${1}-feed.jpg")));
-                return true;
-            }
-            else
-            {
-                return false;
-            }
-        }
-
-        /// <summary>
-        /// BackgroundWorkerから呼び出されるサムネイル画像作成デリゲート
-        /// </summary>
-        /// <param name="args">class CreateImageArgs
-        ///                                 KeyValuePair<string, string> url                  元URLとサムネイルURLのKeyValuePair
-        ///                                 List<KeyValuePair<string, Image>> pics         元URLとサムネイル画像のKeyValuePair
-        ///                                 List<KeyValuePair<string, string>> tooltiptext 元URLとツールチップテキストのKeyValuePair
-        ///                                 string errmsg                                        取得に失敗した際のエラーメッセージ
-        /// </param>
-        /// <returns>サムネイル画像作成に成功した場合はTrue,失敗した場合はFalse
-        /// なお失敗した場合はargs.errmsgにエラーを表す文字列がセットされる</returns>
-        /// <remarks></remarks>
-        private bool brightkite_CreateImage(CreateImageArgs args)
-        {
-            // TODO: サムネイル画像読み込み処理を記述します
-            var img = (new HttpVarious()).GetImage(args.url.Value, args.url.Key, 10000, out args.errmsg);
-            if (img == null)
-            {
-                return false;
-            }
-            // 成功した場合はURLに対応する画像、ツールチップテキストを登録
-            args.pics.Add(new KeyValuePair<string, Image>(args.url.Key, img));
-            args.tooltipText.Add(new KeyValuePair<string, string>(args.url.Key, ""));
-            return true;
-        }
-
-#endregion
-
 #region "Twitgoo"
         /// <summary>
         /// URL解析部で呼び出されるサムネイル画像URL作成デリゲート
@@ -2602,196 +2546,6 @@ namespace OpenTween
             args.pics.Add(new KeyValuePair<string, Image>(args.url.Key, img));
             args.tooltipText.Add(new KeyValuePair<string, string>(args.url.Key, ""));
             return true;
-        }
-
-#endregion
-
-#region "PicPlz"
-        /// <summary>
-        /// URL解析部で呼び出されるサムネイル画像URL作成デリゲート
-        /// </summary>
-        /// <param name="args">class GetUrlArgs
-        ///                                 args.url        URL文字列
-        ///                                 args.imglist    解析成功した際にこのリストに元URL、サムネイルURLの形で作成するKeyValuePair
-        /// </param>
-        /// <returns>成功した場合True,失敗の場合False</returns>
-        /// <remarks>args.imglistには呼び出しもとで使用しているimglistをそのまま渡すこと</remarks>
-
-        private bool PicPlz_GetUrl(GetUrlArgs args)
-        {
-            // TODO URL判定処理を記述
-            var mc = Regex.Match(string.IsNullOrEmpty(args.extended) ? args.url : args.extended,
-                                 @"^http://picplz\.com/user/\w+/pic/(?<longurl_ids>\w+)/?$", RegexOptions.IgnoreCase);
-            if (mc.Success)
-            {
-                // TODO 成功時はサムネイルURLを作成しimglist.Addする
-                args.imglist.Add(new KeyValuePair<string, string>(args.url, mc.Value));
-                return true;
-            }
-            mc = Regex.Match(string.IsNullOrEmpty(args.extended) ? args.url : args.extended,
-                             @"^http://picplz\.com/(?<shorturl_ids>\w+)?$", RegexOptions.IgnoreCase);
-            if (mc.Success)
-            {
-                // TODO 成功時はサムネイルURLを作成しimglist.Addする
-                args.imglist.Add(new KeyValuePair<string, string>(args.url, mc.Value));
-                return true;
-            }
-            return false;
-        }
-
-        /// <summary>
-        /// BackgroundWorkerから呼び出されるサムネイル画像作成デリゲート
-        /// </summary>
-        /// <param name="args">class CreateImageArgs
-        ///                                 KeyValuePair<string, string> url                  元URLとサムネイルURLのKeyValuePair
-        ///                                 List<KeyValuePair<string, Image>> pics         元URLとサムネイル画像のKeyValuePair
-        ///                                 List<KeyValuePair<string, string>> tooltiptext 元URLとツールチップテキストのKeyValuePair
-        ///                                 string errmsg                                        取得に失敗した際のエラーメッセージ
-        /// </param>
-        /// <returns>サムネイル画像作成に成功した場合はTrue,失敗した場合はFalse
-        /// なお失敗した場合はargs.errmsgにエラーを表す文字列がセットされる</returns>
-        /// <remarks></remarks>
-
-        private class PicPlzDataModel
-        {
-            [DataContract]
-            public class Icon
-            {
-                [DataMember(Name = "url")] public string Url = null;
-                [DataMember(Name = "width")] public int Width = 0;
-                [DataMember(Name = "height")] public int Height = 0;
-            }
-
-            [DataContract]
-            public class Creator
-            {
-                [DataMember(Name = "username")] public string Username = null;
-                [DataMember(Name = "display_name")] public string DisplayName = null;
-                [DataMember(Name = "following_count")] public Int32 FollowingCount = 0;
-                [DataMember(Name = "follower_count")] public Int32 FollowerCount = 0;
-                [DataMember(Name = "id")] public Int32 Id = 0;
-                [DataMember(Name = "icon")] public PicPlzDataModel.Icon Icon = null;
-            }
-
-            [DataContract]
-            public class PicFileInfo
-            {
-                [DataMember(Name = "width")] public int Width = 0;
-                [DataMember(Name = "img_url")] public string ImgUrl = null;
-                [DataMember(Name = "height")] public int Height = 0;
-            }
-
-
-            [DataContract]
-            public class PicFiles
-            {
-                [DataMember(Name = "640r")] public PicFileInfo Pic640r = null;
-                [DataMember(Name = "100sh")] public PicFileInfo Pic100sh = null;
-                [DataMember(Name = "320rh")] public PicFileInfo Pic320rh = null;
-            }
-
-            [DataContract]
-            public class Pics
-            {
-                [DataMember(Name = "view_count")] public int ViewCount = 0;
-                [DataMember(Name = "creator")] public Creator Creator = null;
-                [DataMember(Name = "url")] public string Url = null;
-                [DataMember(Name = "pic_files")] public PicFiles PicFiles = null;
-                [DataMember(Name = "caption")] public string Caption = null;
-                [DataMember(Name = "comment_count")] public int CommentCount = 0;
-                [DataMember(Name = "like_count")] public int LikeCount = 0;
-                [DataMember(Name = "date")] public Int64 _Date = 0;
-                [DataMember(Name = "id")] public int Id = 0;
-            }
-
-            [DataContract]
-            public class Value
-            {
-                [DataMember(Name = "pics")] public Pics[] Pics = null;
-            }
-
-            [DataContract]
-            public class ResultData
-            {
-                [DataMember(Name = "result")] public string Result = null;
-                [DataMember(Name = "value")] public Value Value = null;
-            }
-        }
-
-        private bool PicPlz_CreateImage(CreateImageArgs args)
-        {
-            // TODO: サムネイル画像読み込み処理を記述します
-            var http = new HttpVarious();
-            var apiurl = "http://api.picplz.com/api/v2/pic.json?";
-            var mc = Regex.Match(args.url.Value, @"^http://picplz\.com/user/\w+/pic/(?<longurl_ids>\w+)/?$", RegexOptions.IgnoreCase);
-            if (mc.Success)
-            {
-                apiurl += "longurl_ids=" + mc.Groups["longurl_ids"].Value;
-            }
-            else
-            {
-                mc = Regex.Match(args.url.Value, @"^http://picplz\.com/(?<shorturl_ids>\w+)?$", RegexOptions.IgnoreCase);
-                if (mc.Success)
-                {
-                    apiurl += "shorturl_ids=" + mc.Groups["shorturl_ids"].Value;
-                }
-                else
-                {
-                    return false;
-                }
-            }
-            var src = "";
-            var imgurl = "";
-            if ((new HttpVarious()).GetData(apiurl, null, out src, 0, out args.errmsg, MyCommon.GetUserAgentString()))
-            {
-                var sb = new StringBuilder();
-                var serializer = new DataContractJsonSerializer(typeof(PicPlzDataModel.ResultData));
-                PicPlzDataModel.ResultData res;
-
-                try
-                {
-                    res = MyCommon.CreateDataFromJson<PicPlzDataModel.ResultData>(src);
-                }
-                catch(Exception)
-                {
-                    return false;
-                }
-
-                if (res.Result == "ok")
-                {
-                    try
-                    {
-                        imgurl = res.Value.Pics[0].PicFiles.Pic320rh.ImgUrl;
-                    }
-                    catch(Exception)
-                    {
-
-                    }
-
-                    try
-                    {
-                        sb.Append(res.Value.Pics[0].Caption);
-                    }
-                    catch(Exception)
-                    {
-
-                    }
-                }
-                else
-                {
-                    return false;
-                }
-
-                if (!string.IsNullOrEmpty(imgurl))
-                {
-                    var _img = http.GetImage(imgurl, args.url.Key, 0, out args.errmsg);
-                    if (_img == null) return false;
-                    args.pics.Add(new KeyValuePair<string, Image>(args.url.Key, _img));
-                    args.tooltipText.Add(new KeyValuePair<string, string>(args.url.Key, sb.ToString().Trim()));
-                    return true;
-                }
-            }
-            return false;
         }
 
 #endregion
