@@ -2,6 +2,7 @@
 
 ==== Ver 1.0.5-beta1(2012/xx/xx)
  * CHG: 「タブを固定」機能を「タブを保護」に名称変更
+ * CHG: 閉鎖された画像共有サービスbrightkite・picplzのサムネイル対応を終了
 
 ==== Ver 1.0.4(2012/08/13)
  * NEW: 「タブを固定」機能を追加
